--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 	<link rel="stylesheet" href="css/header.css" />
 	<link rel="stylesheet" href="css/container.css" />
 	<link rel="stylesheet" href="css/slick.css" />
+	<link rel="stylesheet" href="css/footer.css" />
 </head>
 <!--  -->
 
@@ -88,6 +89,7 @@
 					<!-- //header_main -->
 				</div>
 				<!-- //header -->
+
 				<!-- container -->
 				<div class="container">
 					<div class="home">
@@ -1134,84 +1136,432 @@
 								<!--  -->
 								<div class="style_slider">
 									<div class="style_img_box">
-										<a href="#"><span>@aaa1</span><img src="img/스타일 카드.jpg"></a>
+										<a href="#"><span>@aa11</span><img src="img/스타일카드11.jpg"></a>
 									</div>
 									<div class="style_img_box">
-										<a href="#"><span>@bbb2</span><img src="img/스타일 카드 (1).jpg"></a>
+										<a href="#"><span>@bb12</span><img src="img/스타일카드12.jpg"></a>
 									</div>
 									<div class="style_img_box">
-										<a href="#"><span>@ccc3</span><img src="img/스타일 카드 (2).jpg"></a>
+										<a href="#"><span>@cc13</span><img src="img/스타일카드13.jpg"></a>
 									</div>
 									<div class="style_img_box">
-										<a href="#"><span>@ccc4</span><img src="img/스타일 카드 (3).jpg"></a>
+										<a href="#"><span>@cc14</span><img src="img/스타일카드14.jpg"></a>
 									</div>
 									<div class="style_img_box">
-										<a href="#"><span>@ccc5</span><img src="img/스타일 카드 (4).jpg"></a>
+										<a href="#"><span>@cc15</span><img src="img/스타일카드15.jpg"></a>
 									</div>
 									<div class="style_img_box">
-										<a href="#"><span>@ccc6</span><img src="img/스타일 카드 (5).jpg"></a>
+										<a href="#"><span>@cc16</span><img src="img/스타일카드16.jpg"></a>
 									</div>
 									<div class="style_img_box">
-										<a href="#"><span>@ddd7</span><img src="img/스타일 카드 (6).jpg"></a>
+										<a href="#"><span>@dd17</span><img src="img/스타일카드17.jpg"></a>
 									</div>
 									<div class="style_img_box">
-										<a href="#"><span>@eee8</span><img src="img/스타일 카드 (7).jpg"></a>
+										<a href="#"><span>@ee18</span><img src="img/스타일카드18.jpg"></a>
 									</div>
 									<div class="style_img_box">
-										<a href="#"><span>@fff9</span><img src="img/스타일 카드 (8).jpg"></a>
+										<a href="#"><span>@ff19</span><img src="img/스타일카드19.jpg"></a>
 									</div>
 									<div class="style_img_box">
-										<a href="#"><span>@ggg10</span><img src="img/스타일 카드 (9).jpg"></a>
+										<a href="#"><span>@gg20</span><img src="img/스타일카드20.jpg"></a>
 									</div>
 									<div class="style_img_box">
-										<a href="#"><span>hhh11</span><img src="img/스타일 카드 (10).jpg"></a>
+										<a href="#"><span>@hh21</span><img src="img/스타일카드14.jpg"></a>
 									</div>
 								</div>
 							</div>
 						</div>
 					</div>
-					<div class="home_products NB_shoes_items"></div>
-					<div class="social_style_slide popular_user"></div>
-					<div class="banner denim_jeans"></div>
-					<div class="home_products new_lowest_asks"></div>
-					<div class="home_products new_highest_bids"></div>
-					<div class="banner perfume"></div>
-					<div class="home_products upcoming_release"></div>
-					<div class="banner balenciaga"></div>
-					<div class="home_products always_shocking"></div>
-					<div class="banner swoosh"></div>
-					<div class="home_products swoosh_items"></div>
+					<!-- //social_style_slide famousUser -->
+
+					<!-- music -->
+					<div class="banner music-06">
+						<div class="banner_item" style="background-color: #9DA794;">
+							<div class="item_inner">
+								<div class="img_box">
+									<a href="#"><img src="img/banner06.jpg" alt="banner" class="banner_img"></a>
+								</div>
+							</div>
+						</div>
+					</div>
+					<!-- //music -->
+
+					<!--  headphone01 -->
+					<div class="home_products headphone01">
+						<div class="home_products">
+							<div class="product_title">
+								<div class="title">HeadPhone</div>
+								<div class="sub_title">새로운 즉시 구매가</div>
+							</div>
+							<div class="product_list_wrap">
+								<div class="product_list list_first">
+									<div class="product_item">
+										<a href="#">
+											<div class="thumb_box">
+												<div class="product">
+													<img src="img/headphone1.png">
+												</div>
+											</div>
+											<div class="info_box">
+												<div class="brand">
+													<p class="brand-text">Sony</p>
+												</div>
+												<p class="name"> Sony WH-1000XM4 Platinum Silver (Korean Ver.) </p>
+												<div class="price">
+													<div class="amount">
+														<span class="num"> 367,000원</span>
+													</div>
+													<div class="desc">
+														<p>즉시 구매가</p>
+													</div>
+												</div>
+											</div>
+										</a>
+									</div>
+									<div class="product_item">
+										<a href="#">
+											<div class="thumb_box">
+												<div class="product">
+													<img src="img/headphone2.png">
+												</div>
+											</div>
+											<div class=" info_box">
+												<div class="brand">
+													<p class="brand-text">Sony</p>
+												</div>
+												<p class="name">Sony WH-1000XM4 Black (Korean Ver.)</p>
+												<div class="price">
+													<div class="amount">
+														<span class="num"> 403,000원</span>
+													</div>
+													<div class="desc">
+														<p>즉시 구매가</p>
+													</div>
+												</div>
+											</div>
+										</a>
+									</div>
+									<div class="product_item">
+										<a href="#">
+											<div class="thumb_box">
+												<div class="product">
+													<img src="img/headphone3.png" alt="">
+												</div>
+											</div>
+											<div class="info_box">
+												<div class="brand">
+													<p class="brand-text"> Sony </p>
+												</div>
+												<p class="name">Sony WH-1000XM4 Black (Korean Ver.)</p>
+												<div class="price">
+													<div class="amount">
+														<span class="num"> 350,000원</span>
+													</div>
+													<div class="desc">
+														<p>즉시 구매가</p>
+													</div>
+												</div>
+											</div>
+										</a>
+									</div>
+									<div class="product_item">
+										<a href="#">
+											<div class="thumb_box">
+												<div class="product">
+													<img src="img/headphone4.png" alt="">
+												</div>
+											</div>
+											<div class="info_box">
+												<div class="brand">
+													<p class="brand-text"> Apple </p>
+												</div>
+												<p class="name">Apple AirPods Max Space Gray (Korean Ver.)</p>
+												<div class="price">
+													<div class="amount">
+														<span class="num"> 718,000원</span>
+													</div>
+													<div class="desc">
+														<p>즉시 구매가</p>
+													</div>
+												</div>
+											</div>
+										</a>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<!-- // headphone01 -->
+
+					<!-- headphone02 -->
+					<div class="home_products headphone02">
+						<div class="product_title">
+							<div class="title"></div>
+							<div class="sub_title"></div>
+						</div>
+						<div class="product_list_wrap">
+							<div class="product_list list_first">
+								<div class="product_item">
+									<a href="#">
+										<div class="thumb_box">
+											<div class="product">
+												<img src="img/headphone5.png">
+											</div>
+										</div>
+										<div class="info_box">
+											<div class="brand">
+												<p class="brand-text">Marshall</p>
+											</div>
+											<p class="name"> Marshall Monitor II A.N.C Black (Korean Ver.) </p>
+											<div class="price">
+												<div class="amount">
+													<span class="num"> 325,000원</span>
+												</div>
+												<div class="desc">
+													<p>즉시 구매가</p>
+												</div>
+											</div>
+										</div>
+									</a>
+								</div>
+								<div class="product_item">
+									<a href="#">
+										<div class="thumb_box">
+											<div class="product">
+												<img src="img/headphone6.png">
+											</div>
+										</div>
+										<div class=" info_box">
+											<div class="brand">
+												<p class="brand-text"> Apple </p>
+											</div>
+											<p class="name">Apple AirPods Max Silver (Korean Ver.)</p>
+											<div class="price">
+												<div class="amount">
+													<span class="num"> 638,000원</span>
+												</div>
+												<div class="desc">
+													<p>즉시 구매가</p>
+												</div>
+											</div>
+										</div>
+									</a>
+								</div>
+								<div class="product_item">
+									<a href="#">
+										<div class="thumb_box">
+											<div class="product">
+												<img src="img/headphone7.png" alt="">
+											</div>
+										</div>
+										<div class="info_box">
+											<div class="brand">
+												<p class="brand-text"> Sony </p>
+											</div>
+											<p class="name">Sony WH-1000XM5 Silver (Korean Ver.)</p>
+											<div class="price">
+												<div class="amount">
+													<span class="num"> 413,000원</span>
+												</div>
+												<div class="desc">
+													<p>즉시 구매가</p>
+												</div>
+											</div>
+										</div>
+									</a>
+								</div>
+								<div class="product_item">
+									<a href="#">
+										<div class="thumb_box">
+											<div class="product">
+												<img src="img/headphone8.png" alt="">
+											</div>
+										</div>
+										<div class="info_box">
+											<div class="brand">
+												<p class="brand-text"> Sony </p>
+											</div>
+											<p class="name">Sony WH-1000XM4 Platinum Silver (Korean Ver.)</p>
+											<div class="price">
+												<div class="amount">
+													<span class="num"> 367,000원</span>
+												</div>
+												<div class="desc">
+													<p>즉시 구매가</p>
+												</div>
+											</div>
+										</div>
+									</a>
+								</div>
+							</div>
+							<div class="btn_product">
+								<a href="#" class="btn outlinegrey medium">더보기</a>
+							</div>
+						</div>
+					</div>
+					<!-- //headphone02 -->
+
+					<!-- banner_bottom -->
+					<div class="banner_bottom">
+						<a href="#" class="banner_box_left banner_bot">
+							<div class="banner_info">
+								<strong class="info_subtitle">service guide</strong>
+								<p class="info_title">
+									KREAM은 처음이지?
+									<br>
+									서비스 소개를 확인해보세요.
+								</p>
+								<span class="info_txt">서비스 안내</span>
+							</div>
+						</a>
+						<a href="#" class="banner_box_right banner_bot">
+							<div class="banner_info">
+								<strong class="info_subtitle"> download the app </strong>
+								<p class="info_title">
+									KREAM은 앱을 설치하여
+									<br>
+									한정판 스니커즈를 FLEX 하세요!
+								</p>
+								<span class="info_txt">앱 설치하기</span>
+							</div>
+						</a>
+					</div>
+					<!-- //banner_bottom -->
 				</div>
-			</div>
-			<div class="banner_bottom">
-				<a href="#" class="banner_box_left"></a>
-				<a href="#" class="banner_box_right"></a>
+				<!-- //container -->
+
+				<!-- footer -->
+				<div class="footer">
+					<div class="inner">
+						<div class="service_area">
+							<div class="customer_service">
+								<strong class="service_title">
+									고객센터
+									<a href="tel:1588-7813" class="sevice_tel">1588-7813</a>
+								</strong>
+								<div class="service_time">
+									<dlv class="time_box">
+										<div class="time_term">
+											<span>운영시간 평일 11:00 - 18:00 (토 일, 공휴일 휴무)</span>
+											<br>
+											<span>점심시간 평일 13:00 - 14:00</span>
+										</div>
+									</dlv>
+								</div>
+								<p class="service_noti">1:1 문의하기는 앱에서만 가능합니다.</p>
+								<div class="service_btn_box">
+									<a href="#" class="footer_QnA"> 자주 묻는 질문 </a>
+								</div>
+							</div>
+							<div class="footer_menu">
+								<div class="menu_box">
+									<strong class="menu_title">이용안내</strong>
+									<ul class="menu_list">
+										<li class="menu_item">
+											<a href="#" class="menu_link">검수기준</a>
+										</li>
+										<li class="menu_item">
+											<a href="#" class="menu_link">이용정책</a>
+										</li>
+										<li class="menu_item">
+											<a href="#" class="menu_link">페널티 정책</a>
+										</li>
+										<li class="menu_item">
+											<a href="#" class="menu_link">커뮤니티 가이드라인</a>
+										</li>
+									</ul>
+								</div>
+								<div class="menu_box">
+									<strong class="menu_title"> 고객지원 </strong>
+									<ul class="menu_list">
+										<li class="menu_item">
+											<a href="#" class="menu_link">공지사항</a>
+										</li>
+										<li class="menu_item">
+											<a href="#" class="menu_link">서비스 소개</a>
+										</li>
+										<li class="menu_item">
+											<a href="#" class="menu_link"> 쇼룸 안내 </a>
+										</li>
+										<li class="menu_item">
+											<a href="#" class="menu_link">판매자 방문접수</a>
+										</li>
+									</ul>
+								</div>
+							</div>
+						</div>
+						<div class="corporation_area">
+							<ul class="term_list">
+								<li class="term_item">
+									<a href="#">회사소개</a>
+								</li>
+								<li class="term_item">
+									<a href="#">인재채용</a>
+								</li>
+								<li class="term_item">
+									<a href="#">제휴제안</a>
+								</li>
+								<li class="term_item">
+									<a href="#">이용약관</a>
+								</li>
+								<li class="term_item privacy">
+									<a href="#">개인정보처리방침</a>
+								</li>
+							</ul>
+							<div class="footer_sns">
+								<div class="sns_box">
+									<a href="#" calss="sns">
+										<i class="fa fa-facebook" aria-hidden="true"></i>
+									</a>
+									<a href="#" calss="sns">
+										<i class="fa fa-instagram" aria-hidden="true"></i>
+									</a>
+									<a href="#" calss="sns">
+										<i class="fa fab fab fa-youtube" aria-hidden="true"></i>
+									</a>
+								</div>
+							</div>
+							<div class="business_info">
+								<div class="info_list">
+									<dl class="info_item">
+										<dt class="business_title">
+											크림 주식회사 대표 최지구
+											<span class="blank"></span>
+											사업자등록번호 : 570-88-01618
+											<a href="#">사업자정보확인</a>
+											<span class="blank"></span>
+											통신판매업 : 제 2021-성남분당C-0093호
+											<span class="blank"></span>
+											사업장소재지 : 경기도 성남시 분당구 분당내곡로
+											131 판교테크원 타워1, 8층
+											<span class="blank"></span>
+											호스팅 서비스: 네이버 클라우드 (주)
+										</dt>
+									</dl>
+								</div>
+							</div>
+						</div>
+						<div class="notice_guarantee">
+							<!-- ing -->
+							<p class="footer_title">신한은행 채무지급보증 안내</p>
+							<p class="description">
+								당사는 고객님의 현금 결제 금액에 대해 신한은행과 채무지급보증
+								계약을 체결하여 안전거래를 보장하고 있습니다.
+								<a href="#" class="link_quarantee">서비스가입 사실 확인</a>
+							</p>
+						</div>
+						<div class="notice_area">
+							<p class="notice">
+								크림(주)는 통신판매 중개자로서 통신판매의 당사자가 아니므로 개별 판매자가 등록한 상품정보에 대해서 책임을 지지 않습니다. 단, 거래과정에서 검수하고 보증하는 내용데 대한 책음은 당사에
+								있습니다.
+							</p>
+							<p class="copyright">&copy; 포토폴리오 최지구</p>
+						</div>
+					</div>
+				</div>
+				<!-- //footer -->
 			</div>
 		</div>
-		<!-- //container -->
-		<!-- footer -->
-		<div class="footer">
-			<div class="inner">
-				<div class="service_area">
-					<div class="customer_service"></div>
-					<div class="customer_footer_menu"></div>
-				</div>
-				<div class="corporation_area">
-					<div class="term_list"></div>
-					<div class="footer_sns"></div>
-					<div class="business_info"></div>
-				</div>
-				<div class="notice_guarantee">
-					<p class="title"></p>
-					<p class="description"></p>
-				</div>
-				<div class="notice_area">
-					<p class="notice"></p>
-					<p class="copyright"></p>
-				</div>
-			</div>
-		</div>
-		<!-- //footer -->
 	</div>
 	</div>
 	</div>
