--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
 	<meta property="og:site_name" content="Site Name" />
 	<meta property="og:locale" content="KR" />
 	<link rel="icon" href="img/favicon.ico" />
-	<title>KREAM-main</title>
+	<title>KREAM</title>
 
+	<!-- google font -->
+	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR&family=Noto+Sans+Mono&display=swap"
+		rel="stylesheet">
 	<!-- font-awesome -->
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
 	<!-- jQuery  -->
@@ -23,6 +26,10 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css" />
 	<!-- CSS -->
 	<link rel="stylesheet" href="css/main.min.css">
+	<link rel="stylesheet" href="asset/btn.css">
+
+	<!-- JS -->
+	<script src="asset/index.js"></script>
 </head>
 <!--  -->
 
@@ -1420,6 +1427,14 @@
 						</a>
 					</div>
 					<!-- //banner_bottom -->
+
+					<!-- btn -->
+					<button class="btn_top">
+						<div class="btn_wrap">
+							<span>TOP</span>
+						</div>
+					</button>
+					<!-- //btn -->
 				</div>
 				<!-- //container -->
 
@@ -1435,7 +1450,7 @@
 								<div class="service_time">
 									<dlv class="time_box">
 										<div class="time_term">
-											<span>운영시간 평일 11:00 - 18:00 (토 일, 공휴일 휴무)</span>
+											<span>운영시간 평일 11:00 - 18:00 <br> (토 일, 공휴일 휴무)</span>
 											<br>
 											<span>점심시간 평일 13:00 - 14:00</span>
 										</div>
@@ -1533,22 +1548,22 @@
 									</dl>
 								</div>
 							</div>
-						</div>
-						<div class="notice_guarantee">
-							<!-- ing -->
-							<p class="footer_title">신한은행 채무지급보증 안내</p>
-							<p class="description">
-								당사는 고객님의 현금 결제 금액에 대해 신한은행과 채무지급보증
-								계약을 체결하여 안전거래를 보장하고 있습니다.
-								<a href="#" class="link_quarantee">서비스가입 사실 확인</a>
-							</p>
-						</div>
-						<div class="notice_area">
-							<p class="notice">
-								크림(주)는 통신판매 중개자로서 통신판매의 당사자가 아니므로 개별 판매자가 등록한 상품정보에 대해서 책임을 지지 않습니다. 단, 거래과정에서 검수하고 보증하는 내용데 대한 책음은 당사에
-								있습니다.
-							</p>
-							<p class="copyright">&copy; 포토폴리오 최지구</p>
+							<div class="notice_guarantee">
+								<!-- ing -->
+								<p class="footer_title">신한은행 채무지급보증 안내</p>
+								<p class="description">
+									당사는 고객님의 현금 결제 금액에 대해 신한은행과 채무지급보증
+									계약을 체결하여 안전거래를 보장하고 있습니다.
+									<a href="#" class="link_quarantee">서비스가입 사실 확인</a>
+								</p>
+							</div>
+							<div class="notice_area">
+								<p class="notice">
+									크림(주)는 통신판매 중개자로서 통신판매의 당사자가 아니므로 개별 판매자가 등록한 상품정보에 대해서 책임을 지지 않습니다. 단, 거래과정에서 검수하고 보증하는 내용데 대한 책음은 당사에
+									있습니다.
+								</p>
+								<p class="copyright"> 비상업적용도 &copy; 포트폴리오 최지구</p>
+								</div>
 						</div>
 					</div>
 				</div>
